Card stats visibility fixed

--- a/styles.css
+++ b/styles.css
@@ -385,7 +385,7 @@ h1::after {
     top: 67%;
     left: 35%;
     width: 30%;
-    height: 21%;
+    height: 24%;
     display: flex;
     align-items: flex-start;
     justify-content: center;
